@@ -37,10 +37,10 @@ End
 ])
 
 AT_DATA([pound.cfi],
-[Include "svc1.cfg"
-ListenHTTP
+[ListenHTTP
+Include "svc1"
 End
-Include "svc2.cfg"
+Include "svc2"
 ])
 
 AT_DATA([input],
@@ -61,7 +61,7 @@ x-backend-number: 1
 end
 ])
 
-perl $HARNESS --preproc svc1 --preproc svc2 --transcript xscript.log input
+perl $HARNESS --transcript xscript.log input
 ])
 
 AT_CLEANUP
